# rbac-service

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  tools.rs
api/src/controller/: user.rs
api/src/middleware/: auth.rs
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: lib.rs  permissions.rs  role_permissions.rs  roles.rs  user.rs  user_roles.rs
service/tests/: prepare.rs
