[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.3", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"] }
entity = { path = "../entity" }
chrono = "0.4.39"
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
